--- a/Home/index.html
+++ b/Home/index.html
@@ -2,11 +2,28 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="IMG/Logo_Bloco_de_Notas.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To DO You</title>
+    <title>To Do You</title>
+    <link rel="shortcut icon" href="IMG/Logo_Bloco_de_Notas.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello Word!</h1>
+
+<header class="header">
+    <div class="logo">
+        <img src="IMG/Logo_Bloco_de_Notas.png" alt="Logo To Do You">
+    </div>
+
+    <nav class="botoes">
+        <a href="#" class="botao">Início</a>
+        <a href="#" class="botao">Login</a>
+        <a href="#" class="botao">Cadastro</a>
+    </nav>
+</header>
+
+<main>
+    
+</main>
+
 </body>
 </html>
