--- a/Home/index.html
+++ b/Home/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +12,7 @@
 <header class="header">
     <div class="logo">
         <img src="IMG/Logo_Bloco_de_Notas.png" alt="Logo To Do You">
+        <h1>To Do You</h1>
     </div>
 
     <nav class="botoes">
@@ -21,8 +22,10 @@
     </nav>
 </header>
 
-<main>
-    
+<main class="container">
+    <div class="box">
+        <h2>Sua Tarefas Aqui</h2>
+    </div>
 </main>
 
 </body>
